manifests/elkia/overlays/default/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix
  namespace: elkia
spec:
  stripPrefix:
    prefixes:
      - /.ory/kratos/public
